# actix-user-authentication

./: .env.dev.json  .gitignore  Cargo.toml  README.md
client/src/: App.js
migrations/2020-08-14-130946_user_table/: up.sql
migrations/2020-08-14-140401_seed_user/: down.sql  up.sql
migrations/2020-08-21-212151_refresh_token/: down.sql  up.sql
src/: config.rs  main.rs  schema.rs
src/db/: db_connection.rs
src/errors/: errors.rs
src/handlers/: health.rs  mod.rs  user.rs
src/middleware/: auth.rs  authentication.rs
src/models/: user.rs
src/modules/: hash.rs  jwt.rs
src/routes/: login.rs  mod.rs  session.rs  user.rs
src/tests/: health.rs  login.rs  mod.rs  user.rs
