[package]
name = "auth-example"
version = "0.1.0"
authors = ["Alex Bennett <alexandergraybennett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2" 
actix-rt = "1.1.1"
actix = "0.9.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
config = "0.10.1"
env_logger = "0.7.1"
jsonwebtoken = "7.2.0"
argonautica = "0.2.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
alcoholic_jwt = "1"
bytes = "0.5"
futures = "0.3.5"
pin-project = "0.4.23"
actix-service = "1.0.6"
